# yamete-claudesai

./: CLAUDE.md  README.md  main.py  pyproject.toml
scripts/: default-selections.json  install.sh
tests/: test_app.py  test_config.py  test_hooks.py  test_settings.py  test_state.py
yamete_claudesai/: app.py  config.py  hooks.py  settings.py  state.py
yamete_claudesai/widgets/: add_audio_modal.py  all_hooks_modal.py  assign_modal.py  audio_sidebar.py  confirm_import_modal.py  hook_box.py  question_modal.py
