[project]
name = "yamete-claudesai"
version = "0.1.0"
description = "Assign audio files to Claude Code hooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
